tests-macros/tests/value/fail_enum.stderr
error: Reflect cannot be derived on enums and unions
 --> tests/value/fail_enum.rs:3:6
  |
3 | enum E {
  |      ^

error: ToValue cannot be derived on enums and unions
 --> tests/value/fail_enum.rs:3:6
  |
3 | enum E {
  |      ^

error: IntoValue cannot be derived on enums and unions
 --> tests/value/fail_enum.rs:3:6
  |
3 | enum E {
  |      ^

error: FromValue cannot be derived on enums and unions
 --> tests/value/fail_enum.rs:3:6
  |
3 | enum E {
  |      ^
